EXA-28094 | Fixed alignment in EDI claim submission

--- a/app/skins/claim.less
+++ b/app/skins/claim.less
@@ -449,12 +449,17 @@ ul.multiselect-container.dropdown-menu{
   }
 
   .ediButton {
-    position: fixed;
+    position: absolute;
     float: right;
     z-index: 1;
     margin: 5px;
     right: 20px;
     cursor: pointer !important;
+  }
+  .ediMenu{
+    margin-bottom: 5px !important;
+    position: absolute ;
+    width: 98.3%;
   }
 
   .ediTableRowData {
